# inventory

./: .env.example  .gh-release-notes-0.1.1.md  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  deploy.py  guideline.md  inventory-app.spec  pyproject.toml  quality.py  test_main.http
.github/workflows/: auto-merge.yml  ci.yml  release-manual.yml  release.yml
.inventory-system/: db.sqlite3
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
docs/: CODE_QUALITY.md  DEPLOYMENT.md  DEVELOPMENT.md  RELEASE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  style.css
src/app/: __main__.py  audit.py  cli.py  config.py  db.py  exceptions.py  i18n.py  io_utils.py  main.py  models.py  schemas.py  security.py
src/app/locales/: en.json  ja.json
src/app/routers/: items.py  stock.py  web.py
src/app/services/: inventory.py  performance.py  stock_service.py
src/app/static/: style.css
src/app/static/spa/: app.js
src/app/templates/: base.html  index.html  spa.html
src/inventory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api.py  test_concurrency.py  test_enhanced_api.py
